lib/src/compiler/tests/testdata/errors/2.out
error: mismatching types
 --> line:2:14
  |
2 |   condition: "foo" == 2
  |              ^^^^^ this expression is `string`
  |                       ^ this expression is `integer`
  |